--- a/03_objects_functions.html
+++ b/03_objects_functions.html
@@ -360,7 +360,9 @@ div.tocify {
     <li>
       <a href="03_objects_functions.html">Objekty, proměnné a funkce</a>
     </li>
-    <li class="dropdown-header">Import a export dat</li>
+    <li>
+      <a href="04_import_export.html">Import a export dat</a>
+    </li>
     <li>
       <a href="05_dataframe_manipulation.html">Prohlížení a manipulce s dataframem</a>
     </li>
