--- a/03_objects_functions.html
+++ b/03_objects_functions.html
@@ -355,8 +355,12 @@ div.tocify {
     <span class="caret"></span>
   </a>
   <ul class="dropdown-menu" role="menu">
-    <li class="dropdown-header">Úvod</li>
-    <li class="dropdown-header">Instalace R, R studia a tidyverse</li>
+    <li>
+      <a href="01_intro_R.html">Představení R</a>
+    </li>
+    <li>
+      <a href="02_install_R.html">Instalace R, R studia a tidyverse</a>
+    </li>
     <li>
       <a href="03_objects_functions.html">Objekty, proměnné a funkce</a>
     </li>
@@ -368,7 +372,12 @@ div.tocify {
     </li>
   </ul>
 </li>
-<li class="dropdown-header">Atestace</li>
+<li>
+  <a href="atestation.html">Atestace</a>
+</li>
+<li>
+  <a href="course_data.html">Data</a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         
