--- a/literature.html
+++ b/literature.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Anotace kurzu</title>
+<title>Doporučená literatura</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -314,16 +314,22 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Anotace kurzu</h1>
+<h1 class="title toc-ignore">Doporučená literatura</h1>
 
 </div>
 
 
-<p><strong>Vyučující</strong>: Jaromír Mazák PhD, Mgr. Aleš Vomáčka</p>
-<p>Kurz je úvodem do programovacího jazyka R vyvinutého pro statistickou analýzu dat. V kurzu není předpokládána předchozí znalost jazyka R, ale podmínkou je základní znalost statistiky a výhodou jsou předchozí zkušenosti s analýzou dat. Minimálním vstupním předpokladem pro je absolvování kurzů prvního ročníku Statistika 1 (ASG100117), Seminář ke statistice 1 (ASG100118) a doporučujeme si ho tedy nechat spíše do 2. ročníku bakalářského studia.</p>
-<p>V kurzu vycházíme z moderního přístupu k analýze dat v R pomocí vývojového prostředí R Studio a “gramatiky” Tidyverse. Tento přístup dnes mezi uživatelskou komunitou pravděpodobně převažuje.</p>
-<p>Učit se R je běh na dlouhou trať. Je to cesta, která znamená mnohem větší časovou investici než zvládnutí softwaru s GUI, jako je například SPSS. Odměnou je mnohem větší flexibilita a v ruce univerzální nástroj pro zpracování dat, analýzu, vizualizaci, ale i programování a automatizaci. Přestože v kurzu se tak daleko nedostaneme, v R je dnes díky dostupným knihovnám a nástrojům možné vytvářet také interaktivní grafické aplikace, webové stránky, prezentace a kromě standardní statistické analýzy jsou dostupné také nástroje tzv. strojového učení. Tento kurz má smysl především pro ty studenty, kteří se chtějí ve své sociologické dráze zaměřovat kvantitativně a kteří jsou připraveni k samostudiu a dalšímu rozvoji skromných základů, které jim kurz nabídne.</p>
-<p>Účast na výuce předpokládá vlastní notebook s připojením k internetu.</p>
+<p>Pro doplnění a rozšíření znalostí je možné využít následující publikce. Všechny publikace jsou volně šiřitelné:</p>
+<p><a href="https://r4ds.had.co.nz/"><strong>R for Data Science</strong></a> (Grolemund G. &amp; Wickham H.) - Základní učebnice R, točící se kolem balíčků Tidyverse. Pokrývá důležité aspekty analýzy dat.</p>
+<p><a href="https://ggplot2-book.org/"><strong>ggplot2: Elegant Graphics for Data Analysis</strong></a> (Wickham H.) - Učebnice zaměřená na vizualizaci dat pomocí balíčku ggplot2.</p>
+<p><a href="https://adv-r.hadley.nz/"><strong>Advanced R</strong></a> (Wickham H.) - Učebnice osvětlující vnitřní fungování R jako programovacího jazyka. Pro vážnější zájemce o programování.</p>
+<p>Kromě knih je možné využít ještě <a href="https://rstudio.com/resources/cheatsheets/">taháky od společnosti Rstudio</a>, které poskytují přehled nejvyužívanějších funkcí. Pro tento kurz se hodí zejména následující:</p>
+<ul>
+<li><a href="https://raw.githubusercontent.com/rstudio/cheatsheets/master/data-visualization-2.1.pdf">Rstudio</a></li>
+<li><a href="https://raw.githubusercontent.com/rstudio/cheatsheets/master/data-import.pdf">Data Import</a></li>
+<li><a href="https://raw.githubusercontent.com/rstudio/cheatsheets/master/data-transformation.pdf">Data Transformation</a></li>
+<li><a href="https://raw.githubusercontent.com/rstudio/cheatsheets/master/data-visualization-2.1.pdf">Data Visualization</a></li>
+</ul>
 
 
 
