--- a/atestation.html
+++ b/atestation.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Atestace</title>
+<title>Podmínky atestace</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -279,9 +279,11 @@ $(document).ready(function () {
     <span class="caret"></span>
   </a>
   <ul class="dropdown-menu" role="menu">
-    <li class="dropdown-header">Úvod</li>
     <li>
-      <a href="02_install_R.hml">Instalace R, R studia a tidyverse</a>
+      <a href="01_intro_R.html">Představení R</a>
+    </li>
+    <li>
+      <a href="02_install_R.html">Instalace R, R studia a tidyverse</a>
     </li>
     <li>
       <a href="03_objects_functions.html">Objekty, proměnné a funkce</a>
@@ -294,7 +296,12 @@ $(document).ready(function () {
     </li>
   </ul>
 </li>
-<li class="dropdown-header">Atestace</li>
+<li>
+  <a href="atestation.html">Atestace</a>
+</li>
+<li>
+  <a href="course_data.html">Data</a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         
@@ -307,13 +314,11 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Atestace</h1>
+<h1 class="title toc-ignore">Podmínky atestace</h1>
 
 </div>
 
 
-<div id="atestace" class="section level1">
-<h1>Atestace</h1>
 <p>Pro úspěšné splnění předmětu je nutné splnit následující úkol:</p>
 <p>V červnu roku 2019 provedlo <a href="cvvm.soc.cas.cz/">Centrum pro výzkum veřejného mínění</a> průzkum zaměřený na to, jak veřejnost hodnotí závažnost vybraných celospolečenských hrozeb a připravenost České republiky na ně. Respondenti byly dotazováni na zhruba 26 hrozeb a pro každou z nich určili, jak je podle nich závažná a jak dobře jsme na ni připravení. Celá zpráva s názvem <em>Celospolečenské hrozby podle veřejnosti</em> je k nalezení <a href="https://cvvm.soc.cas.cz/media/com_form2content/documents/c2/a5077/f9/po191223.pdf">zde</a></p>
 <p>Pro získání zápočtu splňte <strong>jedno</strong> z následujících:</p>
@@ -322,10 +327,10 @@ $(document).ready(function () {
 <li><p>Replikujte Graf 1. Drobné odchylky od originálu nevadí (např. odstín barev, font a velikost písma), ale graf by měl obsahovat všechny důležité aspekty, jako popisky os, barevné rozlišení bodů, legendu, atd. Nezapomeňtě ani na název a popis grafu.</p></li>
 </ol>
 <p>V obou případech odevzdejte skript, který musí být plně funkční, tedy musí proběhnout bez chyby od začátku do konce bez vnějších zásahů.</p>
-<p>Data pro vypracování úkolu jsou k nalezení buď v <a href="https://archiv.soc.cas.cz/">Českém sociálněvědním datovém archivu</a>, nebo ke stažení rovnou <a href="https://github.com/alesvomacka/Uvod_do_analyzy_dat_v_R/raw/master/data/cvvm_cerven_2019.rds">zde</a></p>
+<p>Data pro vypracování úkolu jsou k nalezení buď v <a href="https://archiv.soc.cas.cz/">Českém sociálněvědním datovém archivu</a>, nebo ke stažení rovnou <a href="https://github.com/alesvomacka/Uvod_do_analyzy_dat_v_R/raw/master/data/cvvm_cerven_2019.rds">zde</a>.</p>
 <p>Případně stáhnout rovnou v R pomocí funkce:</p>
 <pre class="r"><code>cvvm = read.csv(&quot;https://raw.githubusercontent.com/alesvomacka/Uvod_do_analyzy_dat_v_R/master/data/cvvm_cerven_2019.csv&quot;)</code></pre>
-</div>
+<p>Dotazník s popisem otázek je možné stejně jako data stáhout v Datovém archivu, případně <a href="https://raw.githubusercontent.com/alesvomacka/Uvod_do_analyzy_dat_v_R/master/documentation/V1906.pdf">zde</a>.</p>
 
 
 
