--- a/course_data.html
+++ b/course_data.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Anotace kurzu</title>
+<title>Data využívaná v kurzu</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -314,16 +314,105 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Anotace kurzu</h1>
+<h1 class="title toc-ignore">Data využívaná v kurzu</h1>
 
 </div>
 
 
-<p><strong>Vyučující</strong>: Jaromír Mazák PhD, Mgr. Aleš Vomáčka</p>
-<p>Kurz je úvodem do programovacího jazyka R vyvinutého pro statistickou analýzu dat. V kurzu není předpokládána předchozí znalost jazyka R, ale podmínkou je základní znalost statistiky a výhodou jsou předchozí zkušenosti s analýzou dat. Minimálním vstupním předpokladem pro je absolvování kurzů prvního ročníku Statistika 1 (ASG100117), Seminář ke statistice 1 (ASG100118) a doporučujeme si ho tedy nechat spíše do 2. ročníku bakalářského studia.</p>
-<p>V kurzu vycházíme z moderního přístupu k analýze dat v R pomocí vývojového prostředí R Studio a “gramatiky” Tidyverse. Tento přístup dnes mezi uživatelskou komunitou pravděpodobně převažuje.</p>
-<p>Učit se R je běh na dlouhou trať. Je to cesta, která znamená mnohem větší časovou investici než zvládnutí softwaru s GUI, jako je například SPSS. Odměnou je mnohem větší flexibilita a v ruce univerzální nástroj pro zpracování dat, analýzu, vizualizaci, ale i programování a automatizaci. Přestože v kurzu se tak daleko nedostaneme, v R je dnes díky dostupným knihovnám a nástrojům možné vytvářet také interaktivní grafické aplikace, webové stránky, prezentace a kromě standardní statistické analýzy jsou dostupné také nástroje tzv. strojového učení. Tento kurz má smysl především pro ty studenty, kteří se chtějí ve své sociologické dráze zaměřovat kvantitativně a kteří jsou připraveni k samostudiu a dalšímu rozvoji skromných základů, které jim kurz nabídne.</p>
-<p>Účast na výuce předpokládá vlastní notebook s připojením k internetu.</p>
+<p>V kurzu jsou primárně používaná data o Evropských zemích, získáná z Eurostatu</p>
+<p>Data je možné stáhnout v několika formátech:</p>
+<ul>
+<li><p><strong>Comma separated values formát</strong> je ke stažení <a href="https://raw.githubusercontent.com/alesvomacka/Uvod_do_analyzy_dat_v_R/master/data/countries.csv">zde</a> (klikněte pravým tlačítkem a zvolte <em>Uložit odkaz jako…</em>/<em>Save link as…</em>).</p></li>
+<li><p><strong>RDS formát</strong> <a href="https://github.com/alesvomacka/Uvod_do_analyzy_dat_v_R/raw/master/data/countries.rds">zde</a>.</p></li>
+</ul>
+<p>Data obsahují následující proměnné:</p>
+<table>
+<colgroup>
+<col width="14%" />
+<col width="64%" />
+<col width="20%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th align="left">Jméno proměnné</th>
+<th align="left">Popis</th>
+<th align="left">Zdroj</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="left">country</td>
+<td align="left">Jméno země</td>
+<td align="left"></td>
+</tr>
+<tr class="even">
+<td align="left">code</td>
+<td align="left">Dvoumístný ISO kód země</td>
+<td align="left"></td>
+</tr>
+<tr class="odd">
+<td align="left">gdp</td>
+<td align="left">HDP země v milionech euro (2018)</td>
+<td align="left">Eurostat</td>
+</tr>
+<tr class="even">
+<td align="left">population</td>
+<td align="left">Populace země k 1. lednu 2018</td>
+<td align="left">Eurostat</td>
+</tr>
+<tr class="odd">
+<td align="left">area</td>
+<td align="left">Celková rozloha země</td>
+<td align="left">CIA factbook</td>
+</tr>
+<tr class="even">
+<td align="left">eu_member</td>
+<td align="left">Je země členem Evropské unie? (2019)</td>
+<td align="left">Evropská unie</td>
+</tr>
+<tr class="odd">
+<td align="left">postsoviet</td>
+<td align="left">Byla země součástí Východního bloku?</td>
+<td align="left">Wikipedie</td>
+</tr>
+<tr class="even">
+<td align="left">life_exp</td>
+<td align="left">Naděje na dožití při narození (2017)</td>
+<td align="left">OSN</td>
+</tr>
+<tr class="odd">
+<td align="left">uni_prc</td>
+<td align="left">Podíl lidí s vysokoškolským vzděláním ve věku 15 až 64 let (2018)</td>
+<td align="left">Eurostat</td>
+</tr>
+<tr class="even">
+<td align="left">poverty_risk</td>
+<td align="left">Podíl lidí ohrožených chudobou (2017)</td>
+<td align="left">Eurostat</td>
+</tr>
+<tr class="odd">
+<td align="left">material_dep</td>
+<td align="left">Podíl lidí s materiální deprivací, 3 nebo méně položek (2017)</td>
+<td align="left">Eurostat</td>
+</tr>
+<tr class="even">
+<td align="left">hdi</td>
+<td align="left">Index lidského rozvoje (2018)</td>
+<td align="left">OSN</td>
+</tr>
+<tr class="odd">
+<td align="left">foundation_date</td>
+<td align="left">Datum vzniku/zformování země</td>
+<td align="left">Wikipedie</td>
+</tr>
+<tr class="even">
+<td align="left">maj_belief</td>
+<td align="left">Největší náboženská skupina v zemi (2018)</td>
+<td align="left">Pew Researcher Center</td>
+</tr>
+</tbody>
+</table>
+<p>Pro práci v kurzu doporučuji stáhnout data v obou formátech (<code>.csv</code> i <code>.rds</code>) a uložit si je do podsložky <code>data</code> v složce s ostatními materiály ke kurzu.</p>
 
 
 
