--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Anotace kurzu</title>
+<title>index.utf8</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -314,16 +314,18 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Anotace kurzu</h1>
 
 </div>
 
 
+<div id="anotace-kurzu" class="section level2">
+<h2>Anotace kurzu</h2>
 <p><strong>Vyučující</strong>: Jaromír Mazák PhD, Mgr. Aleš Vomáčka</p>
 <p>Kurz je úvodem do programovacího jazyka R vyvinutého pro statistickou analýzu dat. V kurzu není předpokládána předchozí znalost jazyka R, ale podmínkou je základní znalost statistiky a výhodou jsou předchozí zkušenosti s analýzou dat. Minimálním vstupním předpokladem pro je absolvování kurzů prvního ročníku Statistika 1 (ASG100117), Seminář ke statistice 1 (ASG100118) a doporučujeme si ho tedy nechat spíše do 2. ročníku bakalářského studia.</p>
 <p>V kurzu vycházíme z moderního přístupu k analýze dat v R pomocí vývojového prostředí R Studio a “gramatiky” Tidyverse. Tento přístup dnes mezi uživatelskou komunitou pravděpodobně převažuje.</p>
 <p>Učit se R je běh na dlouhou trať. Je to cesta, která znamená mnohem větší časovou investici než zvládnutí softwaru s GUI, jako je například SPSS. Odměnou je mnohem větší flexibilita a v ruce univerzální nástroj pro zpracování dat, analýzu, vizualizaci, ale i programování a automatizaci. Přestože v kurzu se tak daleko nedostaneme, v R je dnes díky dostupným knihovnám a nástrojům možné vytvářet také interaktivní grafické aplikace, webové stránky, prezentace a kromě standardní statistické analýzy jsou dostupné také nástroje tzv. strojového učení. Tento kurz má smysl především pro ty studenty, kteří se chtějí ve své sociologické dráze zaměřovat kvantitativně a kteří jsou připraveni k samostudiu a dalšímu rozvoji skromných základů, které jim kurz nabídne.</p>
 <p>Účast na výuce předpokládá vlastní notebook s připojením k internetu.</p>
+</div>
 
 
 
